# youtube-transcript-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/routers/: __init__.py  channel.py  playlist.py  transcript.py  video.py
app/schemas/: __init__.py  base.py  channel.py  playlist.py  transcript.py  video.py
app/services/: __init__.py  channel.py  playlist.py  transcribe_client.py  transcript.py  video.py  yt_dlp_wrapper.py
docs/: README.md  channel.md  playlist.md  video.md
tests/: __init__.py  test_fallback.py  test_integration.py  test_transcript.py
