[project]
name = "yt-transcript-api"
version = "1.0.0"
description = "YouTube 字幕 API 服務 - 使用 FastAPI 和 youtube_transcript_api 獲取 YouTube 影片的繁體中文字幕"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "youtube-transcript-api>=0.6.0",
    "python-multipart>=0.0.19",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pytubefix>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
